--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2015-10-06  Daiki Ueno  <ueno@gnu.org>
+
+	* sentence.c (sentence_end): Assign initial values to local
+	variables to suppress compiler warnings with
+	-Wmaybe-uninitialized.  This shouldn't address any real bug.
+
 2015-09-11  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.6 released.
