--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -8780,7 +8780,7 @@ adds to the @file{configure.ac} or @file{configure.in} a line of the
 form
 
 @example
-AM_GNU_GETTEXT_VERSION(@value{VERSION})
+AM_GNU_GETTEXT_VERSION(@value{ARCHIVE-VERSION})
 @end example
 
 @noindent
