doc: Fix typo in msgfmt invocation
* gettext-tools/doc/msgfmt.texi: Fix the documentation of -d option,
used in the Desktop Entry mode.

--- a/gettext-tools/doc/msgfmt.texi
+++ b/gettext-tools/doc/msgfmt.texi
@@ -190,7 +190,8 @@ or a combined language and country specification of the form @var{ll_CC}.
 
 @item -d @var{directory}
 @opindex -d@r{, @code{msgfmt} option}
-Specify the base directory of @file{.msg} message catalogs.
+Specify the directory where PO files are read.  The directory must
+contain the @samp{LINGUAS} file.
 
 @end table
 
