doc: Fix typo in gettext_noop example
* doc/gettext.texi (Special cases): Add missing ')' to
a gettext_noop call.

Copyright-paperwork-exempt: yes

--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -2608,7 +2608,7 @@ with the following one:
 
 @{
   static const char *messages[] = @{
-    gettext_noop ("some very meaningful message",
+    gettext_noop ("some very meaningful message"),
     gettext_noop ("and another one")
   @};
   const char *string;
