--- a/gettext-tools/examples/po/zh_TW.po
+++ b/gettext-tools/examples/po/zh_TW.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2009 Yoyodyne, Inc. (msgids)
 # This file is distributed under the same license as the gettext package.
 # Abel Cheung <abelcheung@gmail.com>, 2005.
-# Wei-Lun Chao <bluebat@member.fsf.org>, 2013.
+# Wei-Lun Chao <bluebat@member.fsf.org>, 2013, 2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-examples 0.18\n"
+"Project-Id-Version: gettext-examples 0.19.4.73\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2009-08-16 12:22+0200\n"
-"PO-Revision-Date: 2013-09-03 13:00+0800\n"
+"POT-Creation-Date: 2015-06-23 15:20+0900\n"
+"PO-Revision-Date: 2015-10-08 13:00+0800\n"
 "Last-Translator: Wei-Lun Chao <bluebat@member.fsf.org>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "Language: zh_TW\n"
@@ -17,7 +17,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: hello-c/hello.c:30 hello-c-gnome/hello.c:46 hello-c++/hello.cc:39
+#: hello-c/hello.c:30 hello-c-gnome/hello.c:46
+#: hello-c-gnome3/hello.desktop.in.in:5 hello-c++/hello.cc:39
 #: hello-c++-qt/hello.cc:45 hello-c++-kde/hellowindow.cc:42
 #: hello-c++-gnome/hello.cc:50 hello-c++-wxwidgets/hello.cc:68
 #: hello-objc/hello.m:30 hello-objc-gnustep/Hello.m:49
@@ -45,6 +46,43 @@ msgstr "哈囉，大家好！"
 #, php-format
 msgid "This program is running as process number %d."
 msgstr "本程式正在執行，行程編號為 %d。"
+
+#: hello-c-gnome3/hello.c:79
+#, c-format
+msgid ""
+"<big>Hello world!</big>\n"
+"This program is running as process number <b>%d</b>."
+msgstr ""
+"<big>哈囉，大家好！</big>\n"
+"本程式正在執行，行程編號為 <b>%d</b>。"
+
+#: hello-c-gnome3/hello.c:84
+msgid "<big><u>This is another text</u></big>"
+msgstr "<big><u>這是另一段文字</u></big>"
+
+#: hello-c-gnome3/hello.c:86
+msgid "<big><i>This is yet another text</i></big>"
+msgstr "<big><i>這又是另一段文字</i></big>"
+
+#: hello-c-gnome3/hello.desktop.in.in:4
+msgid "Hello"
+msgstr "哈囉"
+
+#: hello-c-gnome3/hello.ui:5
+msgid "Example Application"
+msgstr "應用軟體範例"
+
+#: hello-c-gnome3/hello.ui:33
+msgid "Update text"
+msgstr "更新文字"
+
+#: hello-c-gnome3/hello.gschema.xml:7
+msgid "Use XML markup"
+msgstr "使用 XML 標記"
+
+#: hello-c-gnome3/hello.gschema.xml:8
+msgid "Whether to use XML markup in the text."
+msgstr "是否在文字中使用 XML 標記"
 
 #: hello-c++-qt/hello.cc:52 hello-c++-kde/hellowindow.cc:49
 #: hello-smalltalk/hello.st.in:32 hello-ycp/hello.ycp:19
