Change msgfmt to produce little-endian .mo files by default.
* gettext-tools/src/msgfmt.c (main): Initialize 'byteswap' so as to
produce little-endian .mo files by default.
* gettext-tools/doc/gettext.texi: Update documentation.
* gettext-tools/doc/msgfmt.texi (--endianness): Likewise.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+* Support for reproducible builds:
+  - msgfmt now produces little-endian .mo files by default.
+
 Version 0.19.7 - December 2015
 
 * Programming languages support:
