--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -6133,8 +6133,8 @@ argument.  Instead, you have to reorder the arguments so that @samp{n}
 comes last:
 
 @smallexample
-printf (ngettext ("%$2d file removed from directory %$1s",
-                  "%$2d files removed from directory %$1s",
+printf (ngettext ("%2$d file removed from directory %1$s",
+                  "%2$d files removed from directory %1$s",
                   n),
         dir, n);
 @end smallexample
