--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,20 @@
 * Support for reproducible builds:
   - msgfmt now produces little-endian .mo files by default.
 
+* Programming languages support:
+  - XML:
+    xgettext and msgfmt now look for .its files in directories
+    supplied through the GETTEXTDATADIRS or XDG_DATA_DIRS environment
+    variable.
+  - JavaScript:
+    xgettext and msgfmt now recognize numbered arguments in format
+    strings.
+
+* Portability:
+  - Improve OS/2 kLIBC support.
+  - Fix libintl compilation issue with pre-C99 compilers.  It was a
+    regression since 0.19.5.
+
 Version 0.19.7 - December 2015
 
 * Programming languages support:
