--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+Version 0.19.8 - June 2016
+
 * Support for reproducible builds:
   - msgfmt now produces little-endian .mo files by default.
 
@@ -14,8 +16,8 @@
   - Improve OS/2 kLIBC support.
   - Fix libintl compilation issue with pre-C99 compilers.  It was a
     regression since 0.19.5.
-  - The AM_GNU_GETTEXT macro can now detect musl-libc's gettext
-    implementation.
+  - The AM_GNU_GETTEXT Autoconf macro can now detect musl-libc's
+    gettext as a compatible implementation.
 
 Version 0.19.7 - December 2015
 
