--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+* Runtime behaviour:
+  - update-po target in Makefile.in.in now uses msgfmt --previous.
+
 Version 0.19.8 - June 2016
 
 * Support for reproducible builds:
