doc: Fix statement about Bulgarian.
Reported by Domingo Bernardo <domingopbernardo@gmail.com>.

* gettext-tools/doc/gettext.texi (Plural forms): Fix classification of
Bulgarian.

--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -6278,10 +6278,11 @@ Faroese @c       0.05 million speakers
 @item Romanic family
 Spanish, @c    328.5 million speakers
 Portuguese, @c 178.0 million speakers - 163 million Brazilian Portuguese
-Italian, @c     61.7 million speakers
-Bulgarian @c     9.1 million speakers
+Italian @c      61.7 million speakers
 @item Latin/Greek family
 Greek @c        13.1 million speakers
+@item Slavic family
+Bulgarian @c     9.1 million speakers
 @item Finno-Ugric family
 Finnish, @c      5.0 million speakers
 Estonian @c      1.0 million speakers
