doc: Add information about lua-gettext package.
* gettext-tools/doc/gettext.texi (Lua): Describe from where to get the
lua-gettext package.

--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -12032,6 +12032,12 @@ lua
 
 @item Ubuntu packages
 lua, lua-gettext
+@*
+You need to install the @code{lua-gettext} package from
+@url{https://gitlab.com/sukhichev/lua-gettext/blob/master/README.us.md}.
+Debian and Ubuntu packages of it are available.  Download the
+appropriate one, and install it through
+@samp{sudo dpkg -i lua-gettext_0.0_amd64.deb}.
 
 @item File extension
 @code{lua}
